--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 				</div>	
 
 				<div id="ContenedorEscudos" style="text-align: center;">
-					<img style="height: 150px" src="" class="img-circle"  id="imgEquipoLocal">vs.
-					<img style="height: 150px" src="" class="img-circle"  id="imgEquipoVisitante">
+					<img style="height: 150px" src="" id="imgEquipoLocal">vs.
+					<img style="height: 150px" src="" id="imgEquipoVisitante">
 				</div>
 				<input id="dateFechaPartido" type="date" class="form-control" placeholder="Fecha del partido" >			    
 				<div id="contTorneos"  style="text-align: center;">
